# BLE-Sensor-Telemetry

./: 549-FinalProj-BLE-Telem.ioc  CMakeLists.txt
Core/Inc/: app_conf.h  main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
Core/Inc/Sensors/: GX21M15.hpp  LPS22HB.hpp  LTR303.hpp  SHTC3.hpp  SensorDevice.hpp
Core/Src/: main.c  main.cpp  stm32_lpm_if.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
Core/Src/Sensors/: GX21M15.cpp  LPS22HB.cpp  LTR303.cpp  SHTC3.cpp  SensorDevice.cpp
STM32_WPAN/App/: app_ble.c  ble_conf.h  telem_app.c  telem_app.h
app/: CMakeLists.txt  debug.conf  prj.conf  sample.yaml
app/boards/: nucleo_wb55rg.overlay
app/src/: bt_svc.c  bt_svc.h  button_svc.c  led_svc.c  main.c  old_main.c  sensor_svc.c  sensor_svc.h
